[package]
name = "any-client"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "any-client"

[dependencies]
log = "0.4.17"
logger = { version = "0.1.0", git = "https://github.com/quambene/utils-rs", branch = "master" }
anyhow = "1.0.64"
thiserror = "1.0.35"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
pretty-json = { version = "0.1.0", git = "https://github.com/quambene/utils-rs", branch = "master" }
url = "2.3.1"
form_urlencoded = "1.1.0"
http = "0.2.8"
reqwest = { version = "0.11.11", features = ["json"] }
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.10"
tungstenite = { version = "0.17.3", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"] }
tonic = { version = "0.8.1", default-features = false, features = ["transport"] }
prost = "0.11.0"
prost-types = "0.11.1"
prost-reflect = { version = "0.9.2", features = ["serde"] }
protobuf = "3.1.0"
protobuf-parse = "3.1.0"
